--- a/app/templates/orders/modals/customers_update_modal.html
+++ b/app/templates/orders/modals/customers_update_modal.html
@@ -43,6 +43,8 @@
             </div>
 
             <!-- Modal Footer Buttons -->
+            <script>
+            ```
             <div class="modal-footer d-flex justify-content-between align-items-center">
 
                 <!-- Form to trigger server call without needing JS -->
@@ -64,6 +66,8 @@
                     <button type="button" class="btn btn-primary" onclick="document.querySelector('#updateForm').submit();">Save Changes</button>
                 </div>
             </div>
+            ```
+            </script>
         </div>
     </div>
 </div>
