--- a/app/templates/orders/orders.html
+++ b/app/templates/orders/orders.html
@@ -69,21 +69,42 @@
                     <h1>Orders</h1>
                     <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#ordersModal">+ New</button>
                 </div>
+
+                <!-- Message Display Container -->
+                {% if msg %}
+                    {{ macros.message(msg, msg_type or "danger", "/orders") }}
+                {% endif %}
+
                 <table class="table table-hover table-borderless" id="orders-table">
                     {% if orders %}
+                    {% set excluded_attribs = ['id', 'order_creation_date', 'line_item_costs', 
+                                               'line_items', 'desired_receipt_date', 'billing_address',
+                                               'shipping_cost'] 
+                    %}
                     <thead>
                         {% for key in orders[0].keys() %}
-                            {% if key not in ['id'] %}
+                            {% if key not in excluded_attribs %}
                                 <th scope="col">{{ key | attribute }}</th>
                             {% endif %}
                         {% endfor %}
                     </thead>
                     <tbody>
                         {% for order in orders %}
-                            <tr onclick="openOrderUpdateModal({{ order.id }})" id="row-{{ order.id }}">
+                        
+                            {# Set the table row color based on the order status #}
+                            {% set tr_map = '' %}
+                            {% if order.status == 'pending' %}
+                                {% set tr_map = 'table-warning' %}
+                            {% elif order.status == 'shipped' %}
+                                {% set tr_map = 'table-info' %}
+                            {% elif order.status == 'delivered' %}
+                                {% set tr_map = 'table-success' %}
+                            {% endif %}
+                            <tr onclick="openOrderUpdateModal({{ order.id }})" id="row-{{ order.id }}"
+                                class="{% if tr_map %}{{ tr_map }}{% endif %}">
                                 {% for key, value in order.items() %}
-                                    {% if key not in ['id'] %}
-                                        {% if key == 'shipping_date' %}
+                                    {% if key not in excluded_attribs %}
+                                        {% if key == 'expected_shipping_date' %}
                                             <td>{{ value | date }}</td>
                                         {% elif key in ['total_cost', 'shipping_cost'] %}
                                             <td>{{ value | currency }}</td>
