--- a/app/templates/orders/modals/orders_add_modal.html
+++ b/app/templates/orders/modals/orders_add_modal.html
@@ -82,6 +82,7 @@
                             id='desired-receipt-date',
                             name='desired-receipt-date',
                             value='',
+                            type='date',
                             pattern="^(0[1-9]|1[0-2])/(0[1-9]|[12][0-9]|3[01])/\d{4}$",
                             tooltip='Enter the desired receipt date in MM/DD/YYYY format.'
                         ) }}
