--- a/app/static/css/inventory.css
+++ b/app/static/css/inventory.css
@@ -35,4 +35,13 @@
     background: rgba(0, 0, 0, 0.5);
     height: 100vh;
     width: 100vw;
-  }
+}
+
+.inventory-header {
+    cursor: pointer;
+}
+
+.table-header-link {
+    text-decoration: none;
+    color: #FFF;
+}
