--- a/app/templates/inventory/modals/inventory_log_modal.html
+++ b/app/templates/inventory/modals/inventory_log_modal.html
@@ -7,21 +7,22 @@
             </div>
             <div class="modal-body">
                 {% if logs %}
-                    <ul class="list-group">
+                    <div class="list-group">
                         {% for log in logs %}
-                            <li class="list-group-item">
-                                <p><strong>{{ log.timestamp | date }}</strong> </p>
-                                {% if log.action == 'Added' %}
-                                    <span class="text-success">{{ log.action }}: </span>
-                                {% else %}
-                                    <span class="text-danger">{{ log.action }}: </span>
-                                {% endif %}
-                                <strong>{{ log.product }}</strong> 
-                                by user: <strong>{{ log.user }}</strong>
-                                
-                            </li>
+                            {% if log.action == 'deleted' %}
+                                {% set log_type = 'danger' %}
+                            {% else %}
+                                {% set log_type = 'success' %}
+                            {% endif %}
+                            <div class="list-group-item list-group-item-{{ log_type }}" aria-current="true">
+                                <div class="d-flex w-100 justify-content-between">
+                                    <h5 class="mb-1">{{ log.product | capitalize }} ({{ log.container_size | capitalize }})</h5>
+                                    <small>{{ log.timestamp | datetime }}</small>
+                                </div>
+                                <small>{{ log.action | capitalize }} by {{ log.user.first_name }} {{ log.user.last_name }}</small>
+                            </div>
                         {% endfor %}
-                    </ul>
+                    </div>
                 {% else %}
                     <p>No logs available at this time.</p>
                 {% endif %}
