--- a/app/templates/orders/modals/orders_update_modal.html
+++ b/app/templates/orders/modals/orders_update_modal.html
@@ -12,7 +12,15 @@
             
                 {% set vertical_margin = 3 %}
                 <div class="row justify-content-left mb-{{ vertical_margin }}">
-                    <h5>Order Info</h5>
+                    <!-- <h5>Order Info</h5> -->
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h5 class="me-auto">Order Info</h5>
+                        <div class="btn-group" role="group">
+                            <button type="button" class="btn btn-outline-secondary" onclick="toggleEdit(true)">Edit</button>
+                            <button type="button" class="btn btn-primary" id="updateOrderButton" onclick="updateOrderForm.submit()" disabled>Update</button>
+                        </div>
+                    </div>
+
                     <div class="col-md-3">
 
                         <!-- order id value to be populated by js -->
@@ -188,8 +196,8 @@
 
                 <!-- Add/Delete Line Item Buttons -->
                 <div class="btn-group" role="group" id="update-line-item-buttons-container" hidden>
-                    <button type="button" class="btn btn-outline-dark" id="update-add-line-item">+</button>
-                    <button type="button" class="btn btn-outline-dark" id="update-delete-line-item" hidden>-</button>
+                    <button type="button" class="btn btn-outline-secondary" id="update-add-line-item">+</button>
+                    <button type="button" class="btn btn-outline-secondary" id="update-delete-line-item" hidden>-</button>
                 </div>
 
             </form>
@@ -204,24 +212,42 @@
                 </div>
 
                 <!-- Form to trigger server call without needing JS -->
-                <form id="orderDeleteForm" method="POST" action="/orders_delete" class="d-flex align-items-center">
+                <div class="d-flex align-items-center">
+                    <form id="orderDeleteForm" method="POST" action="/orders_delete">
                     
-                    <!-- Hidden inputs -->
-                    <input type="hidden" name="order-id-delete" id="order-id-delete">
-                    <input type="hidden" name="order-user-id-delete" id="order-user-id-delete" value="{{ current_user.id }}">
+                        <!-- Hidden inputs -->
+                        <input type="hidden" name="order-id-delete" id="order-id-delete">
+                        <input type="hidden" name="order-user-id-delete" id="order-user-id-delete" value="{{ current_user.id }}">
+                        
+
+                    </form>
+                    <form id="orderCancelForm" method="POST" action="/orders_cancel">
                     
-                    <!-- Button to delete product from inventory -->
-                    <button type="button" class="btn btn-danger" onclick="document.querySelector('#orderDeleteForm').submit();">Delete</button>
-                </form>
+                        <!-- Hidden inputs -->
+                        <input type="hidden" name="order-id-cancel" id="order-id-cancel">
+                        <input type="hidden" name="order-user-id-cancel" id="order-user-id-cancel" value="{{ current_user.id }}">
+                        
+                    </form>
+                </div>
+
 
                 <!-- Push buttons to right side of footer -->
                 <div class="ml-auto">
-                    <!-- Button to close modal -->
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <div class="btn-toolbar" role="toolbar">
+                        <div class="btn-group me-2" role="group">
+                            <!-- Cancel/Delete order buttons -->
+                            <button type="button" class="btn btn-outline-warning" onclick="document.querySelector('#orderCancelForm').submit();">Cancel Order</button>
+                            <button type="button" class="btn btn-outline-danger" onclick="document.querySelector('#orderDeleteForm').submit();">Delete Order</button>
+                        </div>
+                        <div class="btn-group me-2" role="group">
+                            <!-- Edit/Update order buttons -->
+                        </div>
 
-                    <!-- Button to submit form -->
-                    <button onclick="toggleEdit(true)" class="btn">Edit</button>
-                    <button onclick="updateOrderForm.submit()" type="button" class="btn btn-primary" id="updateOrderButton" hidden>Update</button>
+                    <!-- Button to close modal -->
+                    <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> -->
+
+
+                    </div>
                 </div>
             </div>
         </div>
