--- a/app/templates/orders/orders.html
+++ b/app/templates/orders/orders.html
@@ -34,7 +34,7 @@
                 </div>
                 <table class="table table-hover table-borderless">
                     {% if customers %}
-                    <thead>
+                    <thead class="table-dark">
                         {% for key in customers[0].keys() %}
                             {% if key not in ['id'] %}
                                 <th scope="col">{{ key | attribute }}</th>
@@ -75,13 +75,13 @@
                     {{ macros.message(msg, msg_type or "danger", "/orders") }}
                 {% endif %}
 
-                <table class="table table-hover table-borderless" id="orders-table">
+                <table class="table table-hover table-borderless table-striped" id="orders-table">
                     {% if orders %}
                     {% set excluded_attribs = ['id', 'order_creation_date', 'line_item_costs', 
                                                'line_items', 'desired_receipt_date', 'billing_address',
                                                'shipping_cost'] 
                     %}
-                    <thead>
+                    <thead class="table-dark">
                         {% for key in orders[0].keys() %}
                             {% if key not in excluded_attribs %}
                                 <th scope="col">{{ key | attribute }}</th>
@@ -95,13 +95,15 @@
                             {% set tr_map = '' %}
                             {% if order.status == 'pending' %}
                                 {% set tr_map = 'table-warning' %}
+                            {% elif order.status == 'cancelled' %}
+                                {% set tr_map = 'table-danger' %}
                             {% elif order.status == 'shipped' %}
                                 {% set tr_map = 'table-info' %}
                             {% elif order.status == 'delivered' %}
                                 {% set tr_map = 'table-success' %}
                             {% endif %}
                             <tr onclick="openOrderUpdateModal({{ order.id }})" id="row-{{ order.id }}"
-                                class="{% if tr_map %}{{ tr_map }}{% endif %}">
+                                class="{% if tr_map %}{{ tr_map }}{% endif %}" style="cursor: pointer;">
                                 {% for key, value in order.items() %}
                                     {% if key not in excluded_attribs %}
                                         {% if key == 'expected_shipping_date' %}
