--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'components/macros.html' as macros %}
 
 {% block title %}Register{% endblock %}
 
@@ -13,54 +14,148 @@
     
     <form class="auth-form" action="/register" method="POST">
 
-        <!-- first/last name inputs -->
-        <label class="form-label" for="first-name">First Name</label>
-        <input class="form-control" type="text" name="first-name" id="first-name" required>
-        <br>
+        <div class="row mb-3">
+            <!-- TODO: load data back to form on fail -->
 
-        <label class="form-label" for="last-name">Last Name</label>
-        <input class="form-control" type="text" name="last-name" id="last-name" required>
-        <br>
+            <!-- first name inputs -->
+            <div class="col-md-3">
 
-        <!-- shipping address input -->
-        <label class="form-label" for="shipping-address">Shipping Address</label>
-        <input class="form-control" type="text" name="shipping-address" id="shipping-address" required>
-        <br>
+                <!-- first name input -->
+                {{ macros.input_group_floating(
+                    label='First Name',
+                    id='first-name',
+                    name='first-name',
+                    type='text',
+                    value=first_name,
+                    is_required=true,
+                    tooltip='Enter your first name.'
+                ) }}
 
-        <!-- checkbox to prefill billing to shipping -->
-        <input type="checkbox" id="billing-checkbox" name="billing-checkbox">
-        <label for="billing-checkbox">Billing address same as shipping address</label>
-        <br>
+            </div>
 
-        <!-- billing address input (prefillable) -->
-        <label class="form-label" for="billing-address">Billing Address</label>
-        <input class="form-control" type="text" name="billing-address" id="billing-address" required>
-        <br>
+            <!-- last name input -->
+            <div class="col-md-3">
 
-        <!-- username input -->
-        <label class="form-label" for="username">Username</label>
-        <input class="form-control" type="text" name="username" id="username" required>
-        <br>
+                {{ macros.input_group_floating(
+                    label='Last Name',
+                    id='last-name',
+                    name='last-name',
+                    value=last_name,
+                    type='text',
+                    is_required=true,
+                    tooltip='Enter your last name.'
+                ) }}
 
-        <!-- password input -->
-        <label class="form-label" for="password">Password</label>
-        <input class="form-control" type="password" name="password" id="password" required>
-        <br>
+            </div>
 
-        <!-- confirm password input -->
-        <label class="form-label" for="confirm-password">Confirm Password</label>
-        <input class="form-control" type="password" name="confirm-password" id="confirm-password" required>
-        <br>
 
-        <!-- submit button -->
-        <button class="btn" type="submit">Register</button>
+            <div class="col-md-3">
+
+                <!-- shipping address input -->
+                {{ macros.input_group_floating(
+                    label='Shipping Address',
+                    id='shipping-address',
+                    name='shipping-address',
+                    value=shipping_address,
+                    type='text',
+                    is_required=true,
+                    tooltip='Enter your shipping address.'
+                ) }}
+
+            </div>
+
+            <div class="col-md-3">
+
+                <!-- checkbox to prefill billing to shipping -->
+                <!-- <input type="checkbox" id="billing-checkbox" name="billing-checkbox">
+                <label for="billing-checkbox">Billing address same as shipping address</label> -->
+
+                <!-- billing address input -->
+                {{ macros.input_group_floating(
+                    label='Billing Address',
+                    id='billing-address',
+                    name='billing-address',
+                    value=billing_address,
+                    type='text',
+                    is_required=true,
+                    tooltip='Enter your billing address.'
+                ) }}
+
+            </div>
+
+        </div>
+
+        <div class="row mb-3">
+
+            <!-- username input -->
+            <div class="col-md-3">
+
+                {{ macros.input_group_floating(
+                    label='Username',
+                    id='username',
+                    name='username',
+                    value=username,
+                    type='text',
+                    is_required=true,
+                    tooltip='Enter your username.'
+                ) }}
+
+            </div>
+
+            <!-- password input -->
+            <div class="col-md-3">
+
+                {{ macros.input_group_floating(
+                    label='Password',
+                    id='password',
+                    name='password',
+                    type='password',
+                    is_required=true,
+                    tooltip='
+                        Length: 8-20 characters,\n 
+                        At least 1 letter,\n
+                        At least 1 number,\n
+                        Only these special characters: !@#$%^&*-_+=.'
+                ) }}
+
+            </div>
+
+            <div class="col-md-3">
+
+                <!-- confirm password input -->
+                {{ macros.input_group_floating(
+                    label='Confirm Password',
+                    id='confirm-password',
+                    name='confirm-password',
+                    type='password',
+                    is_required=true,
+                    tooltip='Confirm your password.'
+                ) }}
+
+            </div>
+
+            <div class="col-md-3">
+
+                <!-- submit button -->
+                <button class="btn btn-outline-primary" type="submit">Register</button>
+
+            </div>
+
+        </div>
+
     </form>
     
+    <!-- Login link for registered users -->
     <p class="auth-container-redirect">
-        Already have an account? <a href="/login"><button class="register-btn">Login</button></a>
+        Already have an account? <a href="/login"><button class="btn btn-outline-secondary register-btn">Login</button></a>
     </p>
 
-    <p class="system-msg">{% if msg %} {{ msg }} {% endif %}</p>
+    <!-- Message Display Container -->
+    {% if msg %}
+        {{ macros.message(msg, msg_type or "danger", "/register") }}
+    {% endif %}
+
+    <!-- <p class="system-msg">{% if msg %} {{ msg }} {% endif %}</p> -->
 </div>
 
 {% endblock %}
