--- a/app/templates/orders/orders.html
+++ b/app/templates/orders/orders.html
@@ -32,7 +32,7 @@
                     <h1>Customers</h1>
                     <a type="button" class="btn modal-btn" href="{{ url_for('auth.register') }}">+ New</a>
                 </div>
-                <table class="table table-hover table-borderless">
+                <table class="table table-hover table-borderless table-striped">
                     {% if customers %}
                     <thead class="table-dark">
                         {% for key in customers[0].keys() %}
