--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -20,6 +20,9 @@
             <li class="nav-item pb-md-2 pb-lg-3">
                 <a class="sidebar-nav-link nav-link" href="{{ url_for('tickets.tickets_home') }}">Trouble Tickets</a>
             </li>
+            <li class="nav-item pb-md-2 pb-lg-3">
+                <a class="sidebar-nav-link nav-link active" aria-current="page" href="{{ url_for('invoices.invoices_home') }}">Invoicing</a>
+            </li>
             <!-- Admin dashboard only shows if current user is an admin -->
             {% if current_user.is_admin %}
             <li class="nav-item pb-md-2 pb-lg-3">
